force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/Apttus_Config2__OrderWorkflowRuleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in an order workflow rule</description>
    <label>Order Workflow Rule Entry</label>
    <nameField>
        <displayFormat>ORE-{0000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Workflow Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>