force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/fields/Apttus_Config2__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Action__c</fullName>
    <description>The action associated with the rule entry</description>
    <inlineHelpText>The action associated with the rule entry</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amend Order Items</fullName>
            </value>
            <value>
                <fullName>Cancel Order Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>