force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/fields/Apttus_Config2__ActionInputSpec__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionInputSpec__c</fullName>
    <description>The action input specification</description>
    <inlineHelpText>The action input specification</inlineHelpText>
    <label>Action Input Spec</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>