force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/fields/Apttus_Config2__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextType__c</fullName>
    <description>The context type associated with the rule entry</description>
    <inlineHelpText>The context type associated with the rule entry</inlineHelpText>
    <label>Context Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Line Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>