force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/fields/Apttus_Config2__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Criteria__c</fullName>
    <description>The rule entry criteria</description>
    <inlineHelpText>The rule entry criteria</inlineHelpText>
    <label>Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>