force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleEntry__c/fields/Apttus_Config2__RuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RuleId__c</fullName>
    <description>ID of the associated rule</description>
    <inlineHelpText>ID of the associated rule</inlineHelpText>
    <label>Order Workflow Rule</label>
    <referenceTo>Apttus_Config2__OrderWorkflowRule__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>RuleEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>